# example-googletests

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
tst/: tst_busnes_logic.cpp  tst_simple.cpp
